syntax = "proto2";

package routeguide;

service RFP {
  rpc GetQuote(SOW) returns(Quote);
  rpc AwardContract(Contract) returns(Contract);
}

// Statement of Work
message SOW {
	required int32 id = 1;
  required string workUnit = 2;
  required ARAid requester = 3;
}

message Quote {
  required int32 cost = 1;
  required SOW sow = 2;
  required ARAid farmer = 3;
}

message Contract {
  required int64 id = 1;
  required Quote quote = 3;
}

message ARAid {
  required int64 id = 1;
  required int64 signature = 2;
}