syntax = "proto3";
package messages;

// A statement of work for a specific job
message SOW {
  bytes nonce = 1;
  string work_unit = 2;
  AraId requester = 3;
  bytes data = 4;
}

// A quote from a specific farmer for a specific job
message Quote {
  bytes nonce = 1;
  int64 per_unit_cost = 2;
  SOW sow = 3;
  AraId farmer = 4;
}

/**
 * An abstract agreement between two parties (a requester and a farmer)
 * spelling out the terms of a specific job 
 **/
message Agreement {
  bytes nonce = 1;
  Quote quote = 2;
  Signature requester_signature = 3;
  Signature farmer_signature = 4;
  bytes data = 5;
}

message Reward {
  bytes nonce = 1;
	Agreement agreement = 2;
  int64 amount = 3;
  Signature requester_signature = 4;
  bytes data = 5;
}

message Receipt {
  bytes nonce = 1;
  Reward reward = 2;
  Signature farmer_signature = 3;
}

// A signature of a peer associated with an ARAid
message Signature {
  AraId ara_id = 1;
  bytes data = 2;
}

// An ARAid
message AraId {
  string did = 1;
}
